--- a/src/cmd/views/users/login.html
+++ b/src/cmd/views/users/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>榆林煤 用户登录</title>
+    <title>榆林住房公积金</title>
     <link href="static/components/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <script src="static/js/jquery/jquery.js" type="text/javascript"></script>
     <script src="static/components/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
